Start to write flexbox styles and add html section for every rule.

--- a/css-flexbox/index.html
+++ b/css-flexbox/index.html
@@ -6,8 +6,32 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>CSS Flex box - Exercise by Moein Alizadeh</title>
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    <h1>CSS Flexbox</h1>
+    <h4>A normal div container without any position and display formatting</h4>
+    <div class="color_blue">
+        <div class="flex-item">1</div>
+        <div class="flex-item">2</div>
+        <div class="flex-item">3</div>
+    </div>
+
+    <hr>
+
+    <h4>Just a flex container <code>display: flex;</code></h4>
+    <div class="color_blue flex-container">
+        <div class="flex-item">1</div>
+        <div class="flex-item">2</div>
+        <div class="flex-item">3</div>
+    </div>
+
+    <hr>
+
+    <h4>Flex container with <code>flex-direction: column;</code></h4>
+    <div class="color_blue flex-container column-direction">
+        <div class="flex-item">1</div>
+        <div class="flex-item">2</div>
+        <div class="flex-item">3</div>
+    </div>
 </body>
 </html>
