--- a/css-flexbox/index.html
+++ b/css-flexbox/index.html
@@ -33,5 +33,86 @@
         <div class="flex-item">2</div>
         <div class="flex-item">3</div>
     </div>
+
+    <hr>
+
+    <h4>Flex container with <code>flex-direction: column-reverse;</code></h4>
+    <div class="color_blue flex-container column-reverse-direction">
+        <div class="flex-item">1</div>
+        <div class="flex-item">2</div>
+        <div class="flex-item">3</div>
+    </div>
+
+    <hr>
+
+    <h4>Flex container with <code>flex-direction: row;</code></h4>
+    <div class="color_blue flex-container row-direction">
+        <div class="flex-item">1</div>
+        <div class="flex-item">2</div>
+        <div class="flex-item">3</div>
+    </div>
+
+    <hr>
+
+    <h4>Flex container with <code>flex-direction: row-reverse;</code></h4>
+    <div class="color_blue flex-container row-reverse-direction">
+        <div class="flex-item">1</div>
+        <div class="flex-item">2</div>
+        <div class="flex-item">3</div>
+    </div>
+
+    <hr>
+
+    <h4>Flex container with <code>flex-wrap: wrap;</code></h4>
+    <div class="color_blue flex-container flex-wrap">
+        <div class="flex-item">1</div>
+        <div class="flex-item">2</div>
+        <div class="flex-item">3</div>
+        <div class="flex-item">4</div>
+        <div class="flex-item">5</div>
+        <div class="flex-item">6</div>
+        <div class="flex-item">7</div>
+        <div class="flex-item">8</div>
+        <div class="flex-item">9</div>
+        <div class="flex-item">10</div>
+        <div class="flex-item">11</div>
+        <div class="flex-item">12</div>
+        <div class="flex-item">13</div>
+        <div class="flex-item">14</div>
+        <div class="flex-item">15</div>
+        <div class="flex-item">16</div>
+        <div class="flex-item">17</div>
+        <div class="flex-item">18</div>
+        <div class="flex-item">19</div>
+        <div class="flex-item">20</div>
+        <div class="flex-item">21</div>
+    </div>
+
+    <hr>
+
+    <h4>Flex container with <code>flex-wrap: nowrap;</code></h4>
+    <div class="color_blue flex-container flex-nowrap">
+        <div class="flex-item">1</div>
+        <div class="flex-item">2</div>
+        <div class="flex-item">3</div>
+        <div class="flex-item">4</div>
+        <div class="flex-item">5</div>
+        <div class="flex-item">6</div>
+        <div class="flex-item">7</div>
+        <div class="flex-item">8</div>
+        <div class="flex-item">9</div>
+        <div class="flex-item">10</div>
+        <div class="flex-item">11</div>
+        <div class="flex-item">12</div>
+        <div class="flex-item">13</div>
+        <div class="flex-item">14</div>
+        <div class="flex-item">15</div>
+        <div class="flex-item">16</div>
+        <div class="flex-item">17</div>
+        <div class="flex-item">18</div>
+        <div class="flex-item">19</div>
+        <div class="flex-item">20</div>
+        <div class="flex-item">21</div>
+    </div>
 </body>
 </html>
